--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   http: ^0.13.5
   provider: ^6.0.3
   rxdart: ^0.27.5
+  flutter_launcher_icons: ^0.10.0
+  sqflite:
+  path:
 
 dev_dependencies:
   flutter_test:
