--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   firebase_auth: ^3.8.0
   cloud_firestore: ^3.4.7
   firebase_storage: ^10.3.8
-  permission_handler: ^10.0.0
+  # permission_handler: ^10.0.0
+  permission_handler: ^9.2.0
   path_provider: ^2.0.11
   firebase_crashlytics: ^2.8.10
 
